--- a/index.html
+++ b/index.html
@@ -4,10 +4,139 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MASTERMIND</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kanit&family=Open+Sans:wght@300&family=Poiret+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>MASTERMIND</header>
 
+    <section id="wholeBoard">
+        <section id="mainBoard">
+            <section id="holes">
+                <section id="solutionHoles">
+                    <div id="solutionHole0"></div>
+                    <div id="solutionHole1"></div>
+                    <div id="solutionHole2"></div>
+                    <div id="solutionHole3"></div> 
+                </section>
+                <section id="1" class="holeLine">
+                    <div id="hole0"></div>
+                    <div id="hole1"></div>
+                    <div id="hole2"></div>
+                    <div id="hole3"></div> 
+                </section>
+                <section id="2" class="holeLine">
+                    <div id="hole4"></div>
+                    <div id="hole5"></div>
+                    <div id="hole6"></div>
+                    <div id="hole7"></div>
+                </section>
+                <section id="3" class="holeLine">
+                    <div id="hole8"></div>
+                    <div id="hole9"></div>
+                    <div id="hole10"></div>
+                    <div id="hole11"></div>
+                </section>
+                <section id="4" class="holeLine">
+                    <div id="hole12"></div>
+                    <div id="hole13"></div>
+                    <div id="hole14"></div>
+                    <div id="hole15"></div>
+                </section>
+                <section id="5" class="holeLine">
+                    <div id="hole16"></div>
+                    <div id="hole17"></div>
+                    <div id="hole18"></div>
+                    <div id="hole19"></div>
+                </section>
+                <section id="6" class="holeLine">
+                    <div id="hole20"></div>
+                    <div id="hole21"></div>
+                    <div id="hole22"></div>
+                    <div id="hole23"></div>
+                </section>
+                <section id="7" class="holeLine">
+                    <div id="hole24"></div>
+                    <div id="hole25"></div>
+                    <div id="hole26"></div>
+                    <div id="hole27"></div>
+                </section>
+                <section id="8" class="holeLine">
+                    <div id="hole28"></div>
+                    <div id="hole29"></div>
+                    <div id="hole30"></div>
+                    <div id="hole31"></div>
+                </section>
+            </section>            
+        </section>
+        
+        <section id="indicatorBoard">
+            <section id="indicatorBoardHoles">
+               <section id="1" class="indicatorHoleLine">
+                <div id="indicatorHole0"></div>
+                <div id="indicatorHole1"></div>
+                <div id="indicatorHole2"></div>
+                <div id="indicatorHole3"></div>
+               </section> 
+               <section id="2" class="indicatorHoleLine">
+                <div id="indicatorHole0"></div>
+                <div id="indicatorHole1"></div>
+                <div id="indicatorHole2"></div>
+                <div id="indicatorHole3"></div>
+               </section> 
+               <section id="3" class="indicatorHoleLine">
+                <div id="indicatorHole0"></div>
+                <div id="indicatorHole1"></div>
+                <div id="indicatorHole2"></div>
+                <div id="indicatorHole3"></div>
+               </section> 
+               <section id="4" class="indicatorHoleLine">
+                <div id="indicatorHole0"></div>
+                <div id="indicatorHole1"></div>
+                <div id="indicatorHole2"></div>
+                <div id="indicatorHole3"></div>
+               </section> 
+               <section id="5" class="indicatorHoleLine">
+                <div id="indicatorHole0"></div>
+                <div id="indicatorHole1"></div>
+                <div id="indicatorHole2"></div>
+                <div id="indicatorHole3"></div>
+               </section> 
+               <section id="6" class="indicatorHoleLine">
+                <div id="indicatorHole0"></div>
+                <div id="indicatorHole1"></div>
+                <div id="indicatorHole2"></div>
+                <div id="indicatorHole3"></div>
+               </section> 
+               <section id="7" class="indicatorHoleLine">
+                <div id="indicatorHole0"></div>
+                <div id="indicatorHole1"></div>
+                <div id="indicatorHole2"></div>
+                <div id="indicatorHole3"></div>
+               </section> 
+               <section id="8" class="indicatorHoleLine">
+                <div id="indicatorHole0"></div>
+                <div id="indicatorHole1"></div>
+                <div id="indicatorHole2"></div>
+                <div id="indicatorHole3"></div>
+               </section>
+            </section>
+        </section>
+        <section id="colorBoard">
+            <section id="colorBoardHoles">
+                <div class="colorHole ch0"></div>
+                <div class="colorHole ch1"></div>
+                <div class="colorHole ch2"></div>
+                <div class="colorHole ch3"></div>
+                <div class="colorHole ch4"></div> 
+                <div class="colorHole ch5"></div> 
+            </section>   
+        </section>
+    </section>
+
+   
     <script src="./js/scripts.js"></script>
 </body>
 </html>
