--- a/index.html
+++ b/index.html
@@ -126,13 +126,14 @@
         </section>
         <section id="colorBoard">
             <section id="colorBoardHoles">
-                <div class="colorHole ch0"></div>
-                <div class="colorHole ch1"></div>
-                <div class="colorHole ch2"></div>
-                <div class="colorHole ch3"></div>
-                <div class="colorHole ch4"></div> 
-                <div class="colorHole ch5"></div> 
-            </section>   
+                <button class="colorHole ch0" onClick="chosenColor(event)" value = "#DC143C"></button>
+                <button class="colorHole ch1" onClick="chosenColor(event)" value = "#89CFF0"></button>
+                <button class="colorHole ch2" onClick="chosenColor(event)" value = "#FFEA00"></button>
+                <button class="colorHole ch3" onClick="chosenColor(event)" value = "#FAA0A0"></button>
+                <button class="colorHole ch4" onClick="chosenColor(event)" value = "#0BDA51"></button> 
+                <button class="colorHole ch5" onClick="chosenColor(event)" value = "darkorchid"></button> 
+            </section> 
+            <button id="newGame">NEW GAME</button>  
         </section>
     </section>
 
