half way through day3

--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
                 <button class="colorHole ch4" onClick="chosenColor(event)" value = "#0BDA51"></button> 
                 <button class="colorHole ch5" onClick="chosenColor(event)" value = "darkorchid"></button> 
             </section> 
-            <button id="newGame">NEW GAME</button>  
+            <button id="newGame">NEW GAME</button> 
+            <button id="submit">SUBMIT</button> 
         </section>
     </section>
 
