as of friday morning

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Kanit&family=Open+Sans:wght@300&family=Poiret+One&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>MASTERMIND</header>
+    <header id="header">MASTERMIND</header>
 
     <section id="wholeBoard">
         <section id="mainBoard">
@@ -75,52 +75,52 @@
         <section id="indicatorBoard">
             <section id="indicatorBoardHoles">
                <section id="1" class="indicatorHoleLine">
-                <div id="indicatorHole0"></div>
-                <div id="indicatorHole1"></div>
-                <div id="indicatorHole2"></div>
-                <div id="indicatorHole3"></div>
+                <div id="indicatorHole00"></div>
+                <div id="indicatorHole01"></div>
+                <div id="indicatorHole02"></div>
+                <div id="indicatorHole03"></div>
                </section> 
                <section id="2" class="indicatorHoleLine">
-                <div id="indicatorHole0"></div>
-                <div id="indicatorHole1"></div>
-                <div id="indicatorHole2"></div>
-                <div id="indicatorHole3"></div>
+                <div id="indicatorHole10"></div>
+                <div id="indicatorHole11"></div>
+                <div id="indicatorHole12"></div>
+                <div id="indicatorHole13"></div>
                </section> 
                <section id="3" class="indicatorHoleLine">
-                <div id="indicatorHole0"></div>
-                <div id="indicatorHole1"></div>
-                <div id="indicatorHole2"></div>
-                <div id="indicatorHole3"></div>
+                <div id="indicatorHole20"></div>
+                <div id="indicatorHole21"></div>
+                <div id="indicatorHole22"></div>
+                <div id="indicatorHole23"></div>
                </section> 
                <section id="4" class="indicatorHoleLine">
-                <div id="indicatorHole0"></div>
-                <div id="indicatorHole1"></div>
-                <div id="indicatorHole2"></div>
-                <div id="indicatorHole3"></div>
+                <div id="indicatorHole30"></div>
+                <div id="indicatorHole31"></div>
+                <div id="indicatorHole32"></div>
+                <div id="indicatorHole33"></div>
                </section> 
                <section id="5" class="indicatorHoleLine">
-                <div id="indicatorHole0"></div>
-                <div id="indicatorHole1"></div>
-                <div id="indicatorHole2"></div>
-                <div id="indicatorHole3"></div>
+                <div id="indicatorHole40"></div>
+                <div id="indicatorHole41"></div>
+                <div id="indicatorHole42"></div>
+                <div id="indicatorHole43"></div>
                </section> 
                <section id="6" class="indicatorHoleLine">
-                <div id="indicatorHole0"></div>
-                <div id="indicatorHole1"></div>
-                <div id="indicatorHole2"></div>
-                <div id="indicatorHole3"></div>
+                <div id="indicatorHole50"></div>
+                <div id="indicatorHole51"></div>
+                <div id="indicatorHole52"></div>
+                <div id="indicatorHole53"></div>
                </section> 
                <section id="7" class="indicatorHoleLine">
-                <div id="indicatorHole0"></div>
-                <div id="indicatorHole1"></div>
-                <div id="indicatorHole2"></div>
-                <div id="indicatorHole3"></div>
+                <div id="indicatorHole60"></div>
+                <div id="indicatorHole61"></div>
+                <div id="indicatorHole62"></div>
+                <div id="indicatorHole63"></div>
                </section> 
                <section id="8" class="indicatorHoleLine">
-                <div id="indicatorHole0"></div>
-                <div id="indicatorHole1"></div>
-                <div id="indicatorHole2"></div>
-                <div id="indicatorHole3"></div>
+                <div id="indicatorHole70"></div>
+                <div id="indicatorHole71"></div>
+                <div id="indicatorHole72"></div>
+                <div id="indicatorHole73"></div>
                </section>
             </section>
         </section>
